# salesforce-mcp

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: release.yml  salesforce-mcp.yml
app/: client.py  main.py
