[project]
name = "salesforce-mcp"
version = "0.1.0"
description = "Salesforce MCP server for managing contacts, leads, opportunities, accounts, cases, and more"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.11.1",
    "simple-salesforce>=1.12.6",
    "typing-extensions>=4.14.1",
]

[build-system]
requires = ["uv_build>=0.7.21,<0.8.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "app"
module-root = "."
source-exclude = [
    "tests/",
    ".pytest_cache/",
    "__pycache__/",
    ".venv/",
    "*.pyc",
    "*.pyo",
    "*.pyd",
    ".DS_Store",
]

[dependency-groups]
dev = [
    "ruff>=0.12.4",
]